# HttpClient

./: CMakeLists.txt  main.cpp
HttpClient/: HttpClient.cpp  HttpClient.vcxproj  HttpClient.vcxproj.filters  HttpCookie.h  Thread.cpp  Utility.h
HttpClient/curl/lib/: libcurl.lib
HttpClient/json/lib/: jsoncpp.lib  jsoncppd.lib
